--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,7 +94,7 @@ input, select, textarea {
 
 	body {
 		background-color: #334170;
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #4b8191 15%, #334170 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #5b8d9b 20%, #2e4568 80%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
