--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ input, select, textarea {
 	body, input, select, textarea {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 17pt;
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 1.65;
 	}
 
@@ -455,7 +455,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #8cc9f0;
+			background-color: #0099CC;
 			color: #ffffff !important;
 			box-shadow: none;
 		}
@@ -532,7 +532,7 @@ input, select, textarea {
 			border-radius: 100%;
 			padding: 0.35em;
 			margin: 0 0 2em 0;
-			cursor: default;
+			cursor: pointer;
 		}
 
 			.icon.major:before {
@@ -562,23 +562,23 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: #74B3CE;
 		}
 
 		.icon.style2 {
-			color: #c79cc8;
+			color: #3E4247;
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: #8D6A9F;
 		}
 
 		.icon.style4 {
-			color: #9bb2e1;
+			color: #71C644;
 		}
 
 		.icon.style5 {
-			color: #8cc9f0;
+			color: #0099CC;
 		}
 
 		@media screen and (max-width: 1680px) {
@@ -602,6 +602,7 @@ input, select, textarea {
 			.icon.major {
 				margin: 0 0 1.5em 0;
 				padding: 0.35em;
+				width: 40%;
 			}
 
 				.icon.major:before {
@@ -920,7 +921,7 @@ input, select, textarea {
 				content: '';
 				width: 3.25em;
 				height: 2px;
-				margin: 0.7em 0 1em 0;
+				margin: 0.4em 0 1em 0;
 				border-radius: 2px;
 			}
 
@@ -1068,23 +1069,23 @@ input, select, textarea {
 		}
 
 			.statistics li.style1 {
-				background-color: #efa8b0;
+				background-color: #74B3CE;
 			}
 
 			.statistics li.style2 {
-				background-color: #c79cc8;
+				background-color: #3E4247;
 			}
 
 			.statistics li.style3 {
-				background-color: #a89cc8;
+				background-color: #8D6A9F;
 			}
 
 			.statistics li.style4 {
-				background-color: #9bb2e1;
+				background-color: #71C644;
 			}
 
 			.statistics li.style5 {
-				background-color: #8cc9f0;
+				background-color: #0099CC;
 			}
 
 			.statistics li strong, .statistics li b {
@@ -1143,7 +1144,7 @@ input, select, textarea {
 				}
 
 				.statistics li .icon:before {
-					font-size: 3.75rem;
+					font-size: 2.75rem;
 				}
 
 				.statistics li strong, .statistics li b {
@@ -1596,7 +1597,7 @@ input, select, textarea {
 			#main input[type="button"].primary,
 			#main button.primary,
 			#main .button.primary {
-				background-color: #8cc9f0;
+				background-color: #0099CC;
 				color: #ffffff !important;
 				box-shadow: none;
 			}
@@ -1643,8 +1644,8 @@ input, select, textarea {
 			#main input[type="email"]:focus,
 			#main select:focus,
 			#main textarea:focus {
-				border-color: #8cc9f0;
-				box-shadow: 0 0 0 1px #8cc9f0;
+				border-color: #0099CC;
+				box-shadow: 0 0 0 1px #0099CC;
 			}
 
 		#main select {
@@ -1676,8 +1677,8 @@ input, select, textarea {
 
 		#main input[type="checkbox"]:focus + label:before,
 		#main input[type="radio"]:focus + label:before {
-			border-color: #8cc9f0;
-			box-shadow: 0 0 0 1px #8cc9f0;
+			border-color: #0099CC;
+			box-shadow: 0 0 0 1px #0099CC;
 		}
 
 		#main ::-webkit-input-placeholder {
@@ -1731,10 +1732,10 @@ input, select, textarea {
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #74B3CE, #8D6A9F, #0099CC);
+			background-image: -webkit-linear-gradient(90deg, #74B3CE, #8D6A9F, #0099CC);
+			background-image: -ms-linear-gradient(90deg, #74B3CE, #8D6A9F, #0099CC);
+			background-image: linear-gradient(90deg, #74B3CE, #8D6A9F, #0099CC);
 		}
 
 		#main table tbody tr {
